cmake_minimum_required ( VERSION 3.0.2 )

#we use Python 2.x
set(Python_ADDITIONAL_VERSIONS 2.7 2.6 2.5 2.4)

include(FindPythonLibs)
include(FindPythonInterp)
include(FindRuby)
include(FindPerl)
include(FindPerlLibs)

#PYTHON_LIBRARY and PYTHON_INCLUDE_DIR can be set for specify the installation of Python to use
if(PYTHON_SUPPORT)
    if (NOT PYTHONLIBS_FOUND)
        message(WARNING "Python not found, disable plugin build")
    else (NOT PYTHONLIBS_FOUND)
        message(STATUS "Enable Python support")
        add_subdirectory(python)
    endif (NOT PYTHONLIBS_FOUND)
endif(PYTHON_SUPPORT)

find_package(Perl 5.0)
if(PERL_SUPPORT)
    if (NOT PERL_FOUND)
#Perl interpreted found at all
        message(WARNING "Perl not found, disable plugin build")
    else (NOT PERL_FOUND)
        if (NOT PERLLIBS_FOUND)
           if (UNIX)
#Perl found, but not libs. Try to find it by Perl output
            message(STATUS "Perl libs not found, try to guess...")
            execute_process(COMMAND bash "-c" "${PERL_EXECUTABLE} -MExtUtils::Embed -e perl_inc| ${PERL_EXECUTABLE} -pe 's/-I//g'" OUTPUT_VARIABLE PERL_INCLUDE_PATH)
            execute_process(COMMAND bash "-c" "${PERL_EXECUTABLE} -MExtUtils::Embed -e ldopts | ${PERL_EXECUTABLE} -ne 'if (m/-L(\\S+)/) {print $1}'" OUTPUT_VARIABLE PERL_LIBRARY_PATH)
            set(PERL_LIBRARY perl)
            link_directories(${PERL_LIBRARY_PATH})
            message(STATUS "Found Perl incs: " ${PERL_INCLUDE_PATH})
            message(STATUS "Found Perl library path: " ${PERL_LIBRARY_PATH})
            endif(UNIX)
        endif (NOT PERLLIBS_FOUND)
        if (PERL_INCLUDE_PATH)
            message(STATUS "Enable Perl support")
            add_subdirectory(perl)
        else(PERL_INCLUDE_PATH)
            message(WARNING "Perl libs not found, disable plugin build")
        endif(PERL_INCLUDE_PATH)
    endif(NOT PERL_FOUND)
endif(PERL_SUPPORT)

find_package(Ruby 2.0)
if(RUBY_SUPPORT)
    if (NOT RUBY_FOUND)
        message(STATUS "Ruby not found, disable plugin build")
    else (NOT RUBY_FOUND)
        message(STATUS "Enable Ruby support")
        add_subdirectory(ruby)
    endif (NOT RUBY_FOUND)
endif(RUBY_SUPPORT)